# gstreamer

./: CMakeLists.txt
win32/common/: config.h  libgstreamer.def
